# findutils

./: .cvsignore  .gitattributes  .gitignore  .x-sc_bindtextdomain  .x-sc_prohibit_always_true_header_tests  .x-sc_prohibit_doubled_word  .x-sc_prohibit_empty_lines_at_EOF  .x-sc_prohibit_test_minus_ao  ABOUT-NLS  AUTHORS  ChangeLog  ChangeLog-2008  ChangeLog-2013  Makefile.am  Makefile.in  NEWS  README  README-CVS  README-alpha  README-hacking  THANKS  TODO  acconfig.h  aclocal.m4  bootstrap.conf  cfg.mk  config.h.in  configure  configure.ac  configure.in  cron.find  debian.Changelog  debian.README  debian.control  debian.postinst  debian.postrm  debian.rules  import-gnulib.config  import-gnulib.sh  patch.out  (+2 more)
autom4te.cache/: output.1  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
build-aux/: .cvsignore  .gitignore  Makefile.am  Makefile.in  check-testfiles.sh  depcomp  git-log-fix  man-lint.sh  src-sniff.py
debian/: Changelog  README.debian  TODO  changelog  conffiles  control  copyright  cron.find  cron.updatedb  find.conf  postinst  preinst  prerm  rules  substvars  updatedb.conf
doc/: .cvsignore  .gitignore  Makefile.am  Makefile.in  find-maint.info  find-maint.texi  find.info  find.info-1  find.info-2  find.texi  gpl-3.0.texi  mdate-sh  perm.texi  regexprops.texi  stamp-1  texinfo.tex  version.texi
find/: .cvsignore  .gitignore  Makefile.am  Makefile.in  defs.h  exec.c  find.1  find.c  finddata.c  fstype.c  ftsfind.1  ftsfind.c  parser.c  pred.c  print.c  print.h  sharefile.c  sharefile.h  tree.c  util.c  version.c
find/testsuite/: .cvsignore  Makefile.am  Makefile.in  binary_locations.sh  checklists.py  excuses.txt  sv-34079.sh  sv-34976-execdir-fd-leak.sh  sv-bug-32043.sh  test_escape_c.sh  test_escapechars.golden  test_escapechars.sh  test_inode.sh
find/testsuite/config/: unix.exp
find/testsuite/find.gnu/: access.exp  comma.exp  delete.exp  deletedir.exp  deletefile.exp  exec-one-rtn-fail.exp  execdir-hier.exp  execdir-in-unreadable.exp  execdir-multiple.exp  execdir-multiple.xo  execdir-one.exp  execdir-pwd.exp  execdir-pwd1.exp  execdir-root-only.exp  follow-arg-parent-symlink.exp  fprint-unwritable.exp  fprintf-samefile.exp  ilname.exp  inum.exp  lname.exp  name-period.xo  no-fdleak-test.exp  perm-slash.exp  posix-dflt.xo  posix-h.exp  posix-h.xo  posix-l.xo  posix-perminvalid.exp  printf-nonlocal-symlink.exp  printf-nonlocal-symlink.xo  printf-reserved.exp  printf-symlink.exp  printf-symlink.xo  printf.exp  printf.xo  quit.exp  samefile-missing.exp  samefile-p-brokenlink.exp  sv-bug-12230.exp  sv-bug-17490.exp  (+7 more)
find/testsuite/find.posix/: bracket-depth.exp  dotdotfiles.exp  dotdotfiles.xo  empty-parens.exp  exec-nogaps.exp  exec-nogaps.xo  files-not-expressions1.exp  files-not-expressions2.exp  files-not-expressions3.exp  group-empty.exp  nameslash.exp  perm-vanilla.exp  sizes.exp  sv-bug-14070.exp  sv-bug-14070.xo  sv-bug-15235.exp  sv-bug-19605.exp  sv-bug-19613.exp  sv-bug-25359.exp  sv-bug-25359.xo  sv-bug-27563-exec.exp  sv-bug-27563-exec.xo  sv-bug-30777.exp  typesize.exp  user-empty.exp  user-missing.exp
gl/: Makefile.am  Makefile.in
gnulib/: Makefile.am  Makefile.in
intl/: Makefile.in  bindtextdom.c  config.charset  dcgettext.c  dcigettext.c  dcngettext.c  dgettext.c  dngettext.c  explodename.c  finddomain.c  gettext.c  gettext.h  gettextP.h  hash-string.h  intl-compat.c  l10nflist.c  libgettext.h  libgnuintl.h  loadinfo.h  loadmsgcat.c  localcharset.c  locale.alias  localealias.c  ngettext.c  plural.c  plural.y  ref-add.sin  ref-del.sin  textdomain.c
lib/: .cvsignore  .gitignore  Makefile.am  Makefile.in  ansi2knr.1  ansi2knr.c  arg-max.h  buildcmd.c  buildcmd.h  check-regexprops.sh  dircallback.c  dircallback.h  dirname.c  extendbuf.c  extendbuf.h  fdleak.c  fdleak.h  filemode.c  findutils-version.c  findutils-version.h  fnmatch.c  fnmatch.h  forcefindlib.c  getline.c  getline.h  getopt.c  getopt1.c  gnulib-version.c  gnulib-version.h  gnulib-version.sh  human.c  idcache.c  listfile.c  listfile.h  lstat.c  memcmp.c  modechange.c  modetype.h  nextelem.c  nextelem.h  (+24 more)
lib/posix/: Makefile.in
locate/: .cvsignore  .gitignore  Makefile.am  Makefile.in  bigram.c  code.c  dblocation.texi  frcode.c  locate.1  locate.c  locatedb.5  locatedb.h  updatedb.1  updatedb.in  updatedb.sh  word_io.c
locate/testsuite/: .cvsignore  .gitignore  Makefile.am  Makefile.in
locate/testsuite/config/: unix.exp
locate/testsuite/locate.gnu/: bigendian.exp  bigprefix1.exp  exists1.exp  exists2.exp  exists3.exp  ignore_case1.exp  ignore_case2.exp  ignore_case3.exp  littleendian.exp  notexists1.exp  notexists2.exp  notexists3.exp  oldformat.exp  slocate.exp  slocate.xo  sv-bug-14535.exp  sv-bug-19484.exp
m4/: ChangeLog  Makefile.am  Makefile.in  check-decl.m4  findlib.m4  fnmatchcase.m4  getline.m4  jm-macros.m4  mkinstalldirs.m4  noreturn.m4  nullsort.m4  prereq.m4  strftime.m4  withfts.m4
po/: .cvsignore  .gitignore  ChangeLog  Makefile.in.in  Makevars  POTFILES.in  be.gmo  be.po  bg.gmo  bg.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  eo.gmo  eo.po  es.gmo  es.po  et.gmo  et.po  fetch-po-files  fi.gmo  fi.po  findutils.pot  fr.gmo  fr.po  ga.gmo  ga.po  gl.gmo  gl.po  hr.gmo  hr.po  hu.gmo  hu.po  (+47 more)
tests/: Makefile.am  Makefile.in  accept.c  at-func.c  binary-io.c  bind.c  connect.c  fdopen.c  fpucw.h  ftruncate.c  inet_pton.c  infinity.h  (+99 more)
xargs/: .cvsignore  .gitignore  Makefile.am  Makefile.in  xargs.1  xargs.c
xargs/testsuite/: .cvsignore  Makefile.am  Makefile.in
xargs/testsuite/config/: unix.exp
xargs/testsuite/xargs.gnu/: E_-0.exp  n2-s21-0.exp  n2-s21-x-0.exp  n3-s31-0.exp  s14-0.exp  s14_2-0.exp  s15-0.exp  s25-0.exp
xargs/testsuite/xargs.posix/: arg_max_32bit_linux_bug.exp  arg_max_32bit_linux_bug.xo  arg_max_64bit_linux_bug.exp  arg_max_64bit_linux_bug.xo  l2.exp  l2.xo  n2-s21-x.exp  n2-s21.exp  n3-s31.exp  rc-125.exp  s14.exp  s14_2.exp  s15.exp  s25.exp  s42.exp  sv-bug-18714.exp  sv-bug-18714b.exp
xargs/testsuite/xargs.sysv/: eof.exp  s25-t.exp  s25-t.xe
(+23 files in other folders)
